leadimg alignment fix for smaller resolutions

--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -227,7 +227,9 @@ header {
       .leadimg {
         position: absolute;
         left: 0;
-        top: -20%;
+        @media (min-width: 1300px) {
+          top: -20%;
+        }
         min-width: 100%;
         min-height: 100%;
       }
